# parallel-clustering

./: CMakeLists.txt  compatibility.h
CMakeModules/: FindOpenCV2.cmake
src/: Color.h  kmedoids.cu  main.cpp
